--- a/app/views/finder/index.html.erb
+++ b/app/views/finder/index.html.erb
@@ -1,6 +1,6 @@
 <h1>All Customers</h1>
 
-<%= link_to 'New Customer', new_customer_path %><%= link_to 'Missing Email', 'missing_email' %> <br>
+<%= link_to 'New Customer', new_customer_path %><%= link_to 'Missing Emails', 'missing_email' %> <br>
 
 
 <%= render partial: '/customers/customer',
