--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -8,9 +8,16 @@
   <%= customer.name %>
   <% end %>
 </h2>
-  <% if customer.image.present? %>
+<% if customer.image.present? %>
   <%= image_tag customer.image %>
-  <% end %>
+<% end %>
+<p>
+<% if customer.province_id.present? %>
+  Province: <%= customer.province.name %>
+<% else %>
+  Province: None
+<% end %>
+</p>
 <p>
 Phone: <%= customer.phone_number %>
 </p>
