--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :full_name %>
   </div>
   <div class="field">
+    <%= f.label :province_id %><br>
+    <%= f.collection_select :province_id, Province.all, :id, :name %>
+  </div>
+  <div class="field">
     <%= f.label :phone_number %><br>
     <%= f.text_field :phone_number %>
   </div>
